prover-ray/zkcdriver/testdata/synced/invalid/memory_10.zkc
//error:2:13-19:effect already declared
fn f<buffer,buffer>(addr:u16) -> (byte:u8) {
  byte = buffer[addr]
  return
}
